--- a/www/css/index.css
+++ b/www/css/index.css
@@ -10,7 +10,6 @@
     height:     100%;
     width:      100%;
     background: #007893 url('../img/ajax-loader.gif') 50% 50% no-repeat;
-    z-index: 9;
 }
 
 /* App - Listening & Received
@@ -29,7 +28,7 @@ body {
 }
 iframe {
     display: block;       /* iframes are inline by default */
-    background: #007893;
+    background: #007893 url('../img/ajax-loader.gif') 50% 50% no-repeat;
     border: none;         /* Reset default border */
     height: 100vh;        /* Viewport-relative units */
     width: 100vw;
