--- a/www/css/index.css
+++ b/www/css/index.css
@@ -33,3 +33,23 @@ iframe {
     height: 100vh;        /* Viewport-relative units */
     width: 100vw;
 }
+
+/* App - Offline
+/* -------------------------------------------------- */
+.app.offline {
+    display: block;
+    background: #007893;
+    border: none;
+    width: 100vw;
+    height: 100vh;
+}
+.offline.message {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    text-align: center;
+    font-weight: bold;
+    color: #fff;
+}
